[project]
name = "pulse-board"
version = "0.1.0"
description = "PulseBoard Monitoring is a web application for checking the health of services, IT infrastructure, and IoT devices."
authors = [
    {name = "Oleksandr Romashko",email = "alex.rmshk@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "pulseboard", from = "src" }]

[project.scripts]
pulseboard = "pulseboard.main:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
